--- a/index.html
+++ b/index.html
@@ -265,6 +265,26 @@
         </div>
     </div>
 
+<!-- Contact Form -->
+<div class="contact-form">
+    <h2>Contact Me</h2>
+    <form action="send_email.php" method="POST">
+        <label for="name">Your Name:</label>
+        <input type="text" id="name" name="name" required placeholder="Enter your name">
+
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" name="email" required placeholder="Enter your email">
+
+        <label for="subject">Subject:</label>
+        <input type="text" id="subject" name="subject" required placeholder="Enter subject">
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required placeholder="Enter your message"></textarea>
+
+        <button type="submit">Send Message</button>
+    </form>
+</div>
+    
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
     <div class="version-header">Version Information</div>
