--- a/index.html
+++ b/index.html
@@ -266,21 +266,21 @@
     </div>
 
 <!-- Contact Form -->
-    <div class="contact-form-container">
-        <h2>Contact Me</h2>
-        <form action="contact-form.php" method="POST">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required>
+    <form class="contact-form" action="https://formspree.io/f/{your_form_id}" method="POST">
+    <h2>Contact Me</h2>
+    
+    <label for="name">Your Name:</label>
+    <input type="text" id="name" name="name" required>
 
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required>
+    <label for="email">Your Email:</label>
+    <input type="email" id="email" name="_replyto" required>
 
-            <label for="message">Your Message:</label>
-            <textarea id="message" name="message" required></textarea>
+    <label for="message">Your Message:</label>
+    <textarea id="message" name="message" required></textarea>
 
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
+    <button type="submit">Send Message</button>
+</form>
+
     
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
