--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 <nav class="navbar">
     <ul class="navbar-list">
         <li class="navbar-item">
-            <a href="#profile" class="navbar-link">Profile</a>
+            <a href="#profile-section section" class="navbar-link">Profile</a>
         </li>
         <li class="navbar-item">
-            <a href="#social-links" class="navbar-link">Social Links</a>
+            <a href="#social-links-section" class="navbar-link">Social Links</a>
         </li>
         <li class="navbar-item">
             <a href="#instagram-shoutouts" class="navbar-link">Instagram Shoutouts</a>
@@ -68,16 +68,16 @@
             <a href="#youtube-shoutouts" class="navbar-link">YouTube Shoutouts</a>
         </li>
         <li class="navbar-item">
-            <a href="#tech-info" class="navbar-link">Tech Info</a>
+            <a href="#tech-section section" class="navbar-link">Tech Info</a>
         </li>
         <li class="navbar-item">
-            <a href="#countdown" class="navbar-link">Countdown</a>
+            <a href="#countdown-section" class="navbar-link">Countdown</a>
         </li>
         <li class="navbar-item">
-            <a href="#disabilities" class="navbar-link">Disabilities</a>
+            <a href="#disabilities-section section" class="navbar-link">Disabilities</a>
         </li>
         <li class="navbar-item">
-            <a href="#contact" class="navbar-link">Contact Me</a>
+            <a href="#form-container" class="navbar-link">Contact Me</a>
         </li>
     </ul>
 </nav>
