--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <a href="#instagram-shoutouts" class="navbar-link">Instagram Shoutouts</a>
         </li>
         <li class="navbar-item">
+            <a href="#links-section section" class="navbar-link">Other Links</a>
+        </li>
+        <li class="navbar-item">
             <a href="#youtube-shoutouts" class="navbar-link">YouTube Shoutouts</a>
         </li>
         <li class="navbar-item">
