--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="device-info">Device: Loading...</div>
     <div class="update-time">Current Date and Time: Loading...</div>
     <div class="current-user">Current User's Login: BusArmyDude</div>
-    <div class="countdown">Page refreshing in: 60 seconds</div>
+    <p id="countdown-display">Page will refresh in 5m 00s</p>
 </div>
 
 <!-- Copy Protection Notice -->
