--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
         </a>
     </div>
 </div>
+        
+<!-- RedNote Shoutouts Section -->
+<div id="rednote-shoutouts">
+    <h2>RedNote Creator Shoutouts</h2>
+    <div class="creators-container"></div>
+    <div id="rednote-last-updated">Last updated: </div>
+</div>
+
 
 <!-- Instagram Shoutouts Section -->
 <div class="shoutouts-section section">
