--- a/index.html
+++ b/index.html
@@ -104,10 +104,16 @@
 </div>
         
 <!-- RedNote Shoutouts Section -->
-<div id="rednote-shoutouts">
-    <h2>RedNote Creator Shoutouts</h2>
-    <div class="creators-container"></div>
-    <div id="rednote-last-updated">Last updated: </div>
+<div class="shoutouts-section section">
+    <div id="rednote-shoutouts">
+        <h2>RedNote Creator Shoutouts</h2>
+        <!-- Last Updated Timestamp -->
+        <p class="last-updated"> <span id="rednote-last-updated-timestamp">N/A</span></p>
+    </div>
+
+    <div class="rednote-creator-grid">
+        <!-- RedNote creator cards will be dynamically generated here -->
+    </div>
 </div>
 
 
