--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <div class="social-links-section">
     <h2>Connect with Me</h2>
     <div class="social-links-container">
+        <a href="https://www.tiktok.com/@busarmydude" class="social-button">
+            <img src="tiktok.png" alt="TikTok" class="social-icon">
+            <span>TikTok</span>
         <a href="https://www.xiaohongshu.com/user/profile/6784c343000000000803cd8c?xsec_token=YB4EhMAgFddZj1YnrXXzxso90G2VKQhAUlgIySG8Uofhw=&xsec_source=app_share&xhsshare=CopyLink&appuid=6784c343000000000803cd8c&apptime=1736798901&share_id=5a1717e3dbfb4561b93f2caa50d5a097" class="social-button">
             <img src="rednote.png" alt="Rednote" class="social-icon">
             <span>Rednote</span>
