--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
     </div>
 </div>
         
+<!-- TikTok Creator Shoutouts (For U.S. users) -->
+<div class="section" id="us-shoutouts" style="display: none;">
+    <h2>TikTok Creator Shoutouts (U.S.)</h2>
+    <div class="message-container">
+        <h3>This section isn't available right now</h3>
+        <p>A law banning TikTok has been enacted in the U.S. Unfortunately, that means you can't use TikTok for now. We are fortunate that President Trump has indicated that he will work with us on a solution to reinstate TikTok once he takes office. Please stay tuned!</p>
+        <a href="https://www.tiktok.com" target="_blank" class="learn-more-button">Learn more</a>
+    </div>
+</div>
+
+<!-- TikTok Creator Shoutouts (For other regions like UK, Canada) -->
+<div class="section" id="other-regions-shoutouts" style="display: none;">
+    <h2>TikTok Creator Shoutouts</h2>
+    <!-- Your creator cards for the available regions go here -->
+    <div class="creator-grid">
+        <!-- Creator Card 1, 2, 3... -->
+    </div>
+</div>
+
+        
 <!-- RedNote Shoutouts Section -->
 <div class="shoutouts-section section">
     <div id="rednote-shoutouts">
