--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 <!-- TikTok Creator Shoutouts (For U.S. users) -->
 <div class="section" id="us-shoutouts" style="display: none;">
     <h2>TikTok Creator Shoutouts (U.S.)</h2>
+    <p class="last-updated">Last Updated: <span id="us-last-updated"></span></p>
     <div class="message-container">
         <h3>This section isn't available right now</h3>
         <p>A law banning TikTok has been enacted in the U.S. Unfortunately, that means you can't use TikTok for now. We are fortunate that President Trump has indicated that he will work with us on a solution to reinstate TikTok once he takes office. Please stay tuned!</p>
@@ -119,11 +120,13 @@
 <!-- TikTok Creator Shoutouts (For other regions like UK, Canada) -->
 <div class="section" id="other-regions-shoutouts" style="display: none;">
     <h2>TikTok Creator Shoutouts</h2>
+    <p class="last-updated">Last Updated: <span id="other-regions-last-updated"></span></p>
     <!-- Your creator cards for the available regions go here -->
     <div class="creator-grid">
         <!-- Creator Card 1, 2, 3... -->
     </div>
 </div>
+
 
         
 <!-- RedNote Shoutouts Section -->
