--- a/index.html
+++ b/index.html
@@ -121,12 +121,16 @@
 <div class="section" id="other-regions-shoutouts" style="display: none;">
     <h2>TikTok Creator Shoutouts</h2>
     <p class="last-updated">Last Updated: <span id="other-regions-last-updated"></span></p>
-    <!-- Your creator cards for the available regions go here -->
+    <!-- Creator cards will be dynamically inserted here -->
     <div class="creator-grid">
         <!-- Creator Card 1, 2, 3... -->
     </div>
 </div>
 
+<!-- Error message (if location detection fails) -->
+<div id="location-error" style="display: none;">
+    <p>Unable to detect location. Please try again later.</p>
+</div>
         
 <!-- RedNote Shoutouts Section -->
 <div class="shoutouts-section section">
