--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <p class="last-updated">Last Updated: <span id="us-last-updated"></span></p>
     <div class="message-container">
         <h3>This section isn't available right now</h3>
-        <p>A law banning TikTok has been enacted in the U.S. Unfortunately, that means you can't use TikTok for now. We are fortunate that President Trump has indicated that he will work with us on a solution to reinstate TikTok once he takes office. Please stay tuned!</p>
+        <p>A law banning TikTok has been enacted in the U.S. Unfortunately, this means that the TikTok app is currently unavailable. However, you can still access the TikTok website. We are hopeful that President Trump will work on a solution to reinstate the app once he takes office. Please stay tuned!</p>
         <a href="https://www.tiktok.com" target="_blank" class="learn-more-button">Learn more</a>
     </div>
 </div>
