--- a/index.html
+++ b/index.html
@@ -106,29 +106,58 @@
     </div>
 </div>
         
-    <!-- TikTok Creator Shoutouts (For U.S. users) -->
-<div class="section" id="us-shoutouts" style="display: none;">
-    <h2>TikTok Creator Shoutouts (U.S.)</h2>
-    <p class="last-updated">Last Updated: <span id="us-last-updated"></span></p>
-    <div class="message-container">
-        <h3>This section isn't available right now</h3>
-        <p>A law banning TikTok has been enacted in the U.S. Unfortunately, this means that the TikTok app is currently unavailable. However, you can still access the TikTok website. We are hopeful that President Trump will work on a solution to reinstate the app once he takes office. Please stay tuned!</p>
+        <!-- TikTok Creator Shoutouts (For U.S. users) -->
+    <div id="us-shoutouts" class="section">
+        <h2>TikTok Creator Shoutouts (U.S.)</h2>
+        <p id="us-last-updated" class="last-updated"></p>
+        <div class="creator-grid">
+            <!-- Creators will be dynamically added here if available -->
+        </div>
     </div>
-</div>
 
-<!-- TikTok Creator Shoutouts (For other regions like UK, Canada) -->
-<div class="section" id="other-regions-shoutouts" style="display: none;">
-    <h2>TikTok Creator Shoutouts</h2>
-    <p class="last-updated">Last Updated: <span id="other-regions-last-updated"></span></p>
-    <div class="creator-grid">
-        <!-- Creator Cards will be dynamically inserted here -->
+    <!-- TikTok Creator Shoutouts (For Canada) -->
+    <div id="canada-shoutouts" class="section">
+        <h2>TikTok Creator Shoutouts (Canada)</h2>
+        <p id="canada-last-updated" class="last-updated"></p>
+        <div class="creator-grid">
+            <!-- Creators will be dynamically added here if available -->
+        </div>
     </div>
-</div>
 
-<!-- Error message (if location detection fails) -->
-<div id="location-error" style="display: none;">
-    <p>Unable to detect location. Please try again later.</p>
-</div>
+    <!-- TikTok Creator Shoutouts (For Mexico) -->
+    <div id="mexico-shoutouts" class="section">
+        <h2>TikTok Creator Shoutouts (Mexico)</h2>
+        <p id="mexico-last-updated" class="last-updated"></p>
+        <div class="creator-grid">
+            <!-- Creators will be dynamically added here if available -->
+        </div>
+    </div>
+
+    <!-- TikTok Creator Shoutouts (For UK) -->
+    <div id="uk-shoutouts" class="section">
+        <h2>TikTok Creator Shoutouts (UK)</h2>
+        <p id="uk-last-updated" class="last-updated"></p>
+        <div class="creator-grid">
+            <!-- Creators will be dynamically added here if available -->
+        </div>
+    </div>
+
+    <!-- TikTok Creator Shoutouts (For other regions like Spain, Germany) -->
+    <div id="other-regions-shoutouts" class="section">
+        <h2>TikTok Creator Shoutouts (Other Regions)</h2>
+        <p id="other-regions-last-updated" class="last-updated"></p>
+        <div class="creator-grid">
+            <!-- Creators will be dynamically added here if available -->
+        </div>
+    </div>
+
+    <!-- Section for unavailable regions -->
+    <div id="unavailable-section" class="section" style="display:none;">
+        <div id="message-container">
+            <h3 id="unavailable-title">This section isn't available right now</h3>
+            <p id="unavailable-description"></p>
+        </div>
+    </div>
         
 <!-- RedNote Shoutouts Section -->
 <div class="shoutouts-section section">
