--- a/index.html
+++ b/index.html
@@ -106,57 +106,19 @@
     </div>
 </div>
         
-        <!-- TikTok Creator Shoutouts (For U.S. users) -->
-    <div id="us-shoutouts" class="section">
-        <h2>TikTok Creator Shoutouts (U.S.)</h2>
-        <p id="us-last-updated" class="last-updated"></p>
+        <!-- TikTok Creator Shoutouts Section -->
+    <div id="creator-shoutouts" style="display: none;">
+        <h2>TikTok Creator Shoutouts</h2>
+        <p class="last-updated">Last Updated: <span id="last-updated"></span></p>
         <div class="creator-grid">
-            <!-- Creators will be dynamically added here if available -->
+            <!-- Creator cards will be dynamically inserted here -->
         </div>
     </div>
 
-    <!-- TikTok Creator Shoutouts (For Canada) -->
-    <div id="canada-shoutouts" class="section">
-        <h2>TikTok Creator Shoutouts (Canada)</h2>
-        <p id="canada-last-updated" class="last-updated"></p>
-        <div class="creator-grid">
-            <!-- Creators will be dynamically added here if available -->
-        </div>
-    </div>
-
-    <!-- TikTok Creator Shoutouts (For Mexico) -->
-    <div id="mexico-shoutouts" class="section">
-        <h2>TikTok Creator Shoutouts (Mexico)</h2>
-        <p id="mexico-last-updated" class="last-updated"></p>
-        <div class="creator-grid">
-            <!-- Creators will be dynamically added here if available -->
-        </div>
-    </div>
-
-    <!-- TikTok Creator Shoutouts (For UK) -->
-    <div id="uk-shoutouts" class="section">
-        <h2>TikTok Creator Shoutouts (UK)</h2>
-        <p id="uk-last-updated" class="last-updated"></p>
-        <div class="creator-grid">
-            <!-- Creators will be dynamically added here if available -->
-        </div>
-    </div>
-
-    <!-- TikTok Creator Shoutouts (For other regions like Spain, Germany) -->
-    <div id="other-regions-shoutouts" class="section">
-        <h2>TikTok Creator Shoutouts (Other Regions)</h2>
-        <p id="other-regions-last-updated" class="last-updated"></p>
-        <div class="creator-grid">
-            <!-- Creators will be dynamically added here if available -->
-        </div>
-    </div>
-
-    <!-- Section for unavailable regions -->
-    <div id="unavailable-section" class="section" style="display:none;">
-        <div id="message-container">
-            <h3 id="unavailable-title">This section isn't available right now</h3>
-            <p id="unavailable-description"></p>
-        </div>
+    <!-- Error message for when TikTok isn't available in the region -->
+    <div id="location-error" style="display: none;">
+        <h3>This section isn't available in your region right now</h3>
+        <p>Unfortunately, TikTok is not available in your region. We hope it will be reinstated soon!</p>
     </div>
         
 <!-- RedNote Shoutouts Section -->
