--- a/index.html
+++ b/index.html
@@ -106,23 +106,21 @@
     </div>
 </div>
         
-        <!-- Last Updated Section -->
-    <div class="last-updated-section">
-        <p>Last Updated: <span id="last-updated"></span></p>
-    </div>
+       <header>
+    <h1>TikTok Creator Shoutouts</h1>
+  </header>
 
-    <!-- TikTok Region Content -->
-    <div id="region-content" style="display: none;">
-        <h2>TikTok Creators</h2>
-        <div id="creator-container">
-            <!-- Creator cards will be dynamically added here -->
-        </div>
-    </div>
+  <div id="lastUpdated"></div>
 
-    <!-- Message for unavailable regions -->
-    <div id="region-message" style="display: none;">
-        <!-- This message will show if TikTok is unavailable in the user's region -->
-    </div>
+  <div id="unavailableMessage" style="display: none;">
+    <h3>This content is currently unavailable in your platform or region.</h3>
+    <p id="regionMessage"></p>
+  </div>
+
+  <section id="section">
+    <!-- Creators section will be populated here dynamically -->
+  </section>
+
         
 <!-- RedNote Shoutouts Section -->
 <div class="shoutouts-section section">
