--- a/index.html
+++ b/index.html
@@ -106,20 +106,23 @@
     </div>
 </div>
         
-       <header>
-    <h1>TikTok Creator Shoutouts</h1>
-  </header>
+ <div class="container">
+    <!-- Last Updated Section -->
+    <div id="last-updated-container">
+      <p id="last-updated">Loading Last Updated...</p>
+    </div>
 
-  <div id="lastUpdated"></div>
+    <!-- Section for Creator Shoutouts -->
+    <div id="creator-section" style="display: none;">
+      <h2>Creator Shoutouts</h2>
+      <div id="creator-grid" class="creator-grid"></div>
+    </div>
 
-  <div id="unavailableMessage" style="display: none;">
-    <h3>This content is currently unavailable in your platform or region.</h3>
-    <p id="regionMessage"></p>
+    <!-- Message for Unavailable Regions -->
+    <div id="region-message" style="display: none;">
+      <p>This content is currently unavailable in your platform or region.</p>
+    </div>
   </div>
-
-  <section id="section">
-    <!-- Creators section will be populated here dynamically -->
-  </section>
         
 <!-- RedNote Shoutouts Section -->
 <div class="shoutouts-section section">
