--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h2>Connect with Me</h2>
     <div class="social-links-container">
         <a href="https://tiktok.com/@busarmydude" class="social-button">
-            <img src="logo-tiktok.png" alt="TikTok" class="social-icon">
+            <img src="tiktok.png" alt="TikTok" class="social-icon">
             <span>TikTok</span>
         </a>
         <a href="https://www.snapchat.com/add/riverkritzar" class="social-button">
@@ -84,21 +84,9 @@
             <img src="Apple_Music_icon.svg.png" alt="Apple Music" class="social-icon">
             <span>Apple Music</span>
         </a>
-        <a href="https://www.amazon.com/gp/profile/amzn1.account.AGT3UBZSCSSNND6WAGLOLAS6NICA?isOwnerPublicView=true" class="social-button">
-            <img src="AMZN-e9f942e4.png" alt="Amazon" class="social-icon">
-            <span>Amazon</span>
-        </a>
-        <a href="https://odysee.com/@BusArmyDude:a" class="social-button">
-            <img src="Odysee_Icon.svg.png" alt="Odysee" class="social-icon">
-            <span>Odysee</span>
-        </a>
         <a href="https://discord.gg/NjMtuZYc52" class="social-button">
             <img src="discord-icon.svg" alt="Discord" class="social-icon">
             <span>Discord</span>
-        </a>
-        <a href="https://v.lemon8-app.com/s/OgUYrZUrj" class="social-button">
-            <img src="Lemon8_icon.png" alt="Lemon8" class="social-icon">
-            <span>Lemon8</span>
         </a>
         <a href="https://www.instagram.com/busarmydude/" class="social-button">
             <img src="instagram.png" alt="Instagram" class="social-icon">
@@ -214,9 +202,9 @@
                 <p><span>Price:</span> $1,067.49</p>
                 <p><span>Date Released:</span> September 20, 2024</p>
                 <p><span>Date Bought:</span> November 08, 2024</p>
-                <p><span>OS Version:</span> iOS 18.3 (22D5040d)</p>
+                <p><span>OS Version:</span> iOS 18.3 (22D5055b)</p>
                 <p><span>Battery Capacity %:</span> 100%</p>
-                <p><span>Battery Charge Cycles:</span> 99</p>
+                <p><span>Battery Charge Cycles:</span> 113</p>
             </div>
 
             <!-- Apple Watch Section -->
@@ -245,7 +233,7 @@
                 <p><span>Price:</span> $742.29</p>
                 <p><span>Date Released:</span> January 17, 2023</p>
                 <p><span>Date Bought:</span> May 16, 2024</p>
-                <p><span>OS Version:</span> macOS Sequoia 15.3 Beta 2 (24D5040f)</p>
+                <p><span>OS Version:</span> macOS Sequoia 15.3 Beta (24D5055b)</p>
             </div>
         </div>
 
