--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
-    <meta http-equiv="refresh" content="60">
+    <meta http-equiv="refresh" content="300">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
@@ -261,7 +261,7 @@
     <div class="device-info">Device: Loading...</div>
     <div class="update-time">Current Date and Time: Loading...</div>
     <div class="current-user">Current User's Login: BusArmyDude</div>
-    <div class="countdown">Page refreshing in: 60 seconds</div>
+    <div class="countdown">Page refreshing in: 5 minutes</div>
 </div>
 
 <!-- Copy Protection Notice -->
