--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@
     </div>
 </div>
 
+<!-- Current President -->        
+<section id="current-president">
+  <h2>Current U.S. President</h2>
+  <div class="president-info">
+    <img src="path-to-trump-picture.jpg" alt="President Donald J. Trump" class="president-photo">
+    <div class="president-details">
+      <h3>Donald J. Trump</h3>
+      <p><strong>Born:</strong> June 14, 1946</p>
+      <p><strong>Height:</strong> 6'3" (190.5 cm)</p>
+      <p><strong>Party:</strong> Republican Party</p>
+      <p><strong>Presidential Term:</strong> January 20, 2025 at 12:00 PM - January 20, 2029 at 12:00 PM EST</p>
+      <p><strong>Vice President:</strong> JD Vance</p>
+    </div>
+  </div>
+</section>
+        
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <div id="tiktok-shoutouts">
