--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <section id="current-president">
   <h2>Current U.S. President</h2>
   <div class="president-info">
-    <img src="path-to-trump-picture.jpg" alt="President Donald J. Trump" class="president-photo">
+    <img src="donaldtrump.jpg" alt="President Donald J. Trump" class="president-photo">
     <div class="president-details">
       <h3>Donald J. Trump</h3>
       <p><strong>Born:</strong> June 14, 1946</p>
