--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <p><strong>Height:</strong> 6'3" (190.5 cm)</p>
       <p><strong>Party:</strong> Republican Party</p>
       <p><strong>Presidential Term:</strong> January 20, 2025 at 12:00 PM - January 20, 2029 at 12:00 PM EST</p>
-      <p><strong>Vice President:</strong> JD Vance</p>
+      <p><strong>Vice President:</strong> James David Vance</p>
     </div>
   </div>
 </section>
