--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             </div>
         </div>
 
+     <!-- Countdown Section -->
 <div class="countdown-section">
     <h2>Countdown to my 20th birthday</h2>
     <div class="countdown-container">
@@ -202,6 +203,23 @@
         </div>
     </div>
 </div>
+
+  <!-- Printify Section -->       
+<section id="printify-merch">
+  <h2>Printify Merch</h2>
+  <div id="printify-product-container" class="product-grid">
+    <!-- Printify products will be dynamically inserted here -->
+  </div>
+</section>
+
+   <!-- Fourthwall Section -->
+<section id="fourthwall-merch">
+  <h2>Fourthwall Merch</h2>
+  <div id="fourthwall-product-container" class="product-grid">
+    <!-- Fourthwall products will be dynamically inserted here -->
+  </div>
+</section>
+
         
         <!-- Tech Section -->
         <div class="tech-section section">
