--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
     </div>
   </div>
 </section>
+
+<div id="sfcdfzfn5k18r7he7kpcmtngbkskcfqww46"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=dfzfn5k18r7he7kpcmtngbkskcfqww46&down=async" async></script><br><a href="https://www.freecounterstat.com">website hit counter</a><noscript><a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=dfzfn5k18r7he7kpcmtngbkskcfqww46" border="0" title="website hit counter" alt="website hit counter"></a></noscript>
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
