--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@
   </div>
 </section>
 
-<div id="sfcdfzfn5k18r7he7kpcmtngbkskcfqww46"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=dfzfn5k18r7he7kpcmtngbkskcfqww46&down=async" async></script><br><a href="https://www.freecounterstat.com">website hit counter</a><noscript><a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=dfzfn5k18r7he7kpcmtngbkskcfqww46" border="0" title="website hit counter" alt="website hit counter"></a></noscript>
-        
+<div id="counter-container">
+    <a href="https://www.freecounterstat.com" title="website hit counter">
+        <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=dfzfn5k18r7he7kpcmtngbkskcfqww46" border="0" title="website hit counter" alt="website hit counter">
+    </a>
+</div>        
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <div id="tiktok-shoutouts">
