--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     
       gtag('config', 'G-E0RSQS1MS7');
     </script>
+
+<!-- Google API Client Library -->
+    <script src="https://apis.google.com/js/api.js"></script>
+</head>
+<body>
     
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
@@ -282,6 +287,8 @@
     <div class="device-info">Device: Loading...</div>
     <div class="update-time">Current Date and Time: Loading...</div>
     <div class="current-user">Current User's Login: BusArmyDude</div>
+    <div id="live-visitor-count">Loading live visitor count...</div>
+    <button onclick="authenticate()">Authenticate and Show Visitors</button>
     <div class="countdown">Page refreshing in: 5 minutes</div>
 </div>
 
