--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
                 <li><a href="https://www.ninds.nih.gov/health-information/disorders/epilepsy-and-seizures" target="_blank">Epilepsy (Stress Seizures)</a></li>
                 <li><a href="https://www.nimh.nih.gov/health/topics/obsessive-compulsive-disorder-ocd" target="_blank">Obsessive-Compulsive Disorder (OCD)</a></li>
                 <li><a href="https://www.nimh.nih.gov/health/topics/post-traumatic-stress-disorder-ptsd" target="_blank">Post-Traumatic Stress Disorder (PTSD)</a></li>
+                <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3070692/#:~:text=Idiopathic%20Toe%20Walking%20(ITW)%20is,24%25%20of%20the%20childhood%20population." target="_blank">Idiopathic Toe Walking</a></li>
             </ul>
         </div>
     </div>
