--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
     <div class="countdown">Page refreshing in: 5 minutes</div>
 </div>
 
+<!-- Back-to-Top Button -->
+<button id="back-to-top-btn" title="Go to top">↑</button>    
+    
 <!-- Copy Protection Notice -->
     <div class="copy-protection-message">
         <p>Copying and pasting is disabled on this website.</p>
