--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
     </div>
 </div>
 
+<!-- Cookie Consent Popup -->
+<div id="cookieConsent" class="cookie-consent">
+  <p>This website uses cookies to ensure you get the best experience. <a href="#">Learn more</a></p>
+  <button id="acceptCookies" class="cookie-btn">Accept</button>
+</div>
+        
 <!-- Current President -->        
 <section id="current-president">
   <h2>Current U.S. President</h2>
