--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
     </div>
   </div>
 </section>
-  
+
+<div id="loading-spinner" class="spinner"></div>
+        
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
         <div id="tiktok-shoutouts">
