--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
     </div>
 </div>
 
+<!-- Weather Section -->        
+<div class="weather-widget">
+    <h2>Current Weather</h2>
+    <p id="weather-info">Loading weather...</p>
+</div>
+        
         
         <!-- Tech Section -->
         <div class="tech-section section">
