--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
 </div>
 
 <!-- Weather Section -->        
-<div class="weather-widget">
-    <h2>Current Weather</h2>
-    <p id="weather-info">Loading weather...</p>
-</div>
+<div id="weather-info">
+        <h2>Weather Information</h2>
+        <p>Loading weather...</p>
+    </div>
         
         
         <!-- Tech Section -->
