--- a/index.html
+++ b/index.html
@@ -299,6 +299,43 @@
     <div class="countdown">Page refreshing in: 5 minutes</div>
 </div>
 
+<!-- Language Selector Section -->
+<div id="language-selector">
+    <label for="language-dropdown" style="color: #ffffff; font-size: 18px;">Select Language</label>
+    <select id="language-dropdown">
+        <option value="en">English</option>
+        <option value="es">Español</option>
+        <option value="fr">Français</option>
+        <option value="de">Deutsch</option>
+        <option value="it">Italiano</option>
+        <option value="pt">Português</option>
+        <option value="ru">Русский</option> <!-- Russian -->
+        <option value="ja">日本語</option> <!-- Japanese -->
+        <option value="ko">한국어</option> <!-- Korean -->
+        <option value="zh">简体中文</option> <!-- Simplified Chinese -->
+        <option value="zh-tw">繁體中文</option> <!-- Traditional Chinese -->
+        <option value="ar">العربية</option> <!-- Arabic -->
+        <option value="hi">हिन्दी</option> <!-- Hindi -->
+        <option value="bn">বাংলা</option> <!-- Bengali -->
+        <option value="tr">Türkçe</option> <!-- Turkish -->
+        <option value="pl">Polski</option> <!-- Polish -->
+        <option value="nl">Nederlands</option> <!-- Dutch -->
+        <option value="sv">Svenska</option> <!-- Swedish -->
+        <option value="no">Norsk</option> <!-- Norwegian -->
+        <option value="da">Dansk</option> <!-- Danish -->
+        <option value="fi">Suomi</option> <!-- Finnish -->
+        <option value="cs">Čeština</option> <!-- Czech -->
+        <option value="sk">Slovenčina</option> <!-- Slovak -->
+        <option value="ro">Română</option> <!-- Romanian -->
+        <option value="sr">Српски</option> <!-- Serbian -->
+        <option value="hu">Magyar</option> <!-- Hungarian -->
+        <option value="he">עברית</option> <!-- Hebrew -->
+        <option value="id">Bahasa Indonesia</option> <!-- Indonesian -->
+        <option value="ms">Bahasa Malaysia</option> <!-- Malaysian -->
+        <option value="th">ไทย</option> <!-- Thai -->
+        <option value="vi">Tiếng Việt</option> <!-- Vietnamese -->
+    </select>
+    
 <!-- Back-to-Top Button -->
 <button id="back-to-top-btn" title="Go to top">↑</button>    
     
