--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
         <option value="th">ไทย</option> <!-- Thai -->
         <option value="vi">Tiếng Việt</option> <!-- Vietnamese -->
     </select>
+ </div>
     
 <!-- Back-to-Top Button -->
 <button id="back-to-top-btn" title="Go to top">↑</button>    
