--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 </section>
 
 <div id="loading-spinner" class="spinner"></div>
+
+<button id="mode-toggle">Switch to Light Mode</button>       
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
