--- a/index.html
+++ b/index.html
@@ -222,21 +222,25 @@
         <p>Loading weather...</p>
     </div>
 
-<!-- FAQ Section -->
 <div class="faq-section">
-    <h2>Frequently Asked Questions</h2>
+    <h2>FAQ</h2>
     <div class="faq-item">
-        <button class="faq-question">What is this website about?</button>
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> What is the purpose of this website?
+        </button>
         <div class="faq-answer">
-            <p>This website is a link in bio page for creators to showcase their content, social media, and more.</p>
+            <p>This website is designed to provide information and updates on various topics, including news, events, and more!</p>
         </div>
     </div>
     <div class="faq-item">
-        <button class="faq-question">How do I contact support?</button>
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> How can I contact you?
+        </button>
         <div class="faq-answer">
-            <p>You can reach support via our contact form or by sending an email to support@example.com.</p>
+            <p>You can contact us via the contact form or email busarmydude@gmail.com or contact me on discord at busarmydude</p>
         </div>
     </div>
+    <!-- Add more FAQ items as needed -->
 </div>
         
         <!-- Tech Section -->
