--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
 </section>
 
 <div id="loading-spinner" class="spinner"></div>
+
+<!-- Fun Facts Section -->        
+<div class="fun-fact">
+    <h3>Fun Fact of the Day</h3>
+    <p id="fact-text"></p>
+</div>        
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
