--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
     <h3>Fun Fact of the Day</h3>
     <p id="fact-text"></p>
 </div>        
+
+<!-- Quote of the day Section -->        
+<div class="quote-of-the-day">
+    <h3>Quote of the Day</h3>
+    <p id="quote-text"></p>
+    <p id="quote-author"></p>
+</div>
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
