--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 <div id="loading-spinner" class="spinner"></div>
 
 <!-- Fun Facts Section -->        
-<div class="fun-fact">
+<div class="fun-fact-of-the-day">
     <h3>Fun Fact of the Day</h3>
-    <p id="fact-text"></p>
-</div>        
+    <p id="fun-fact-text"></p>
+</div>  
 
 <!-- Quote of the day Section -->        
 <div class="quote-of-the-day">
