--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 
 <div id="loading-spinner" class="spinner"></div>
 
-<!-- Fun Facts Section -->        
-<div class="fun-fact-of-the-day">
-    <h3>Fun Fact of the Day</h3>
-    <p id="fun-fact-text"></p>
-</div>  
+<!-- Fun Fact of the Day Section -->
+<section id="fun-fact-section">
+    <h2>Fun Fact of the Day</h2>
+    <p id="fun-fact-text">Loading...</p>
+</section>
 
-<!-- Quote of the day Section -->        
-<div class="quote-of-the-day">
-    <h3>Quote of the Day</h3>
-    <p id="quote-text"></p>
-    <p id="quote-author"></p>
-</div>
+<!-- Quote of the Day Section -->
+<section id="quote-of-the-day-section">
+    <h2>Quote of the Day</h2>
+    <p id="quote-of-the-day-text">Loading...</p>
+</section>
+
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
