--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 <div id="loading-spinner" class="spinner"></div>
 
 <!-- Fun Fact of the Day Section -->
-<section id="fun-fact-section">
-    <h2>Fun Fact of the Day</h2>
-    <p id="fun-fact-text">Loading...</p>
-</section>
+<div class="section">
+  <h2>Fun Fact of the Day</h2>
+  <p id="fun-fact-text">Loading...</p>
+</div>
 
 <!-- Quote of the Day Section -->
 <section id="quote-of-the-day-section">
