--- a/index.html
+++ b/index.html
@@ -124,16 +124,17 @@
 <div id="loading-spinner" class="spinner"></div>
 
 <!-- Fun Fact of the Day Section -->
-<div class="section">
-  <h2>Fun Fact of the Day</h2>
-  <p id="fun-fact-text">Loading...</p>
+<div class="section fun-fact-section">
+    <h2>Fun Fact of the Day</h2>
+    <p id="fun-fact-text">Loading...</p>
 </div>
 
 <!-- Quote of the Day Section -->
-<section id="quote-of-the-day-section">
+<div class="section quote-of-the-day-section">
     <h2>Quote of the Day</h2>
-    <p id="quote-of-the-day-text">Loading...</p>
-</section>
+    <p id="quote-text">Loading...</p>
+</div>
+
 
         
 <!-- TikTok Shoutouts Section -->
