--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
     <p id="fun-fact-text">Loading...</p>
 </div>
 
+<!-- Today in History Section -->
+<section id="today-in-history-section" class="section">
+  <h2>Today in History</h2>
+  <ul id="history-events" class="content-box">
+    <li>Loading...</li>
+  </ul>
+</section>
+        
 <!-- Quote of the Day Section -->
 <div class="section quote-of-the-day-section">
     <h2>Quote of the Day</h2>
